syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc.lib";
option java_outer_classname = "GreetProto";

service GreetService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc StreamHello(HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
